# math_matrix

./: Cargo.toml  README.md
src/: determinants.rs  lib.rs  matrices.rs
