[package]
name = "math_matrix"
description = "A simple highschool level matrix implementation"
version = "1.1.0"
edition = "2021"
authors = ["FloatingComet62 <shubh2007rai@gmail.com>"]
documentation = "https://docs.rs/math_matrix"
readme = "README.md"
repository = "https://github.com/FloatingComet62/math_matrix"
license-file = "LICENSE"
keywords = ["math", "matrix"]
categories = ["mathematics"]

[dependencies]